<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/user"
            android:title="@string/user"
            android:icon="@drawable/ic_baseline_person_pin_24"/>

        <item android:id="@+id/my_alerts"
            android:title="@string/my_alerts"
            android:icon="@drawable/ic_baseline_notifications_24"/>

        <item android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24"/>
    </group>

    <group android:checkableBehavior="single">

        <item android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/logout_icon"/>
    </group>
</menu>