<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackAlertJaguar_dark"
    tools:context=".ui.app.AlertHomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackAlertJaguar_dark">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/menu" />

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menu"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/welcome_message"
            android:textSize="24sp"
            android:layout_marginTop="70dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/welcomeMessage"
            android:layout_marginTop="70dp"
            android:background="@drawable/background">


            <TextView
                android:id="@+id/noAlertsFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_alerts"
                android:layout_marginTop="40dp"
                android:textSize="24sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/noAlertsFoundImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/not_found"
                android:layout_below="@id/noAlertsFound"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="100dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createAlertButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textAllCaps="false"
                android:textColor="@color/blackAlertJaguar_dark"
                android:layout_marginBottom="60dp"
                android:textSize="34sp"
                android:background="@drawable/button_radius"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/create_alert"
                android:layout_below="@+id/noAlertsFoundImg"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>


    </RelativeLayout>

</ScrollView>