<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.app.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackAlertJaguar_dark">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/menu" />

        <TextView
            android:id="@+id/settingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menu"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/settings_text"
            android:textSize="24sp"
            android:layout_marginTop="70dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/settingsText"
            android:layout_marginTop="70dp"
            android:background="@drawable/background">


            <LinearLayout
                android:id="@+id/addressContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/card_radius"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/marker"
                    android:layout_width="34sp"
                    android:layout_height="34sp"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/ic_baseline_settings_24" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/location_details"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_below="@+id/addressContainer"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createAlertButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textAllCaps="false"
                android:textColor="@color/blackAlertJaguar_dark"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="60dp"
                android:textSize="34sp"
                android:background="@drawable/button_radius"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/create_alert"
                android:layout_below="@+id/recyclerView"
                android:layout_centerHorizontal="true"/>




        </RelativeLayout>


    </RelativeLayout>

</ScrollView>