<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackAlertJaguar_dark"
    tools:context=".ui.app.MyAlertsActivity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/blackAlertJaguar_dark"
        app:headerLayout="@layout/header"
        app:itemTextColor="@color/white"
        android:fitsSystemWindows="true"
        app:menu="@menu/main_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blackAlertJaguar_dark">

            <TextView
                android:id="@+id/myAlerts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="88dp"
                android:text="@string/my_alerts"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/myAlerts"
                android:layout_marginTop="70dp"
                android:background="@drawable/background">


                <LinearLayout
                    android:id="@+id/addressContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/card_radius"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/marker"
                        android:layout_width="34sp"
                        android:layout_height="34sp"
                        android:layout_marginEnd="10dp"
                        app:srcCompat="@drawable/ic_baseline_location_on_24" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/default_address"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@+id/addressContainer"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="100dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/createAlertButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recyclerView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="36dp"
                    android:background="@drawable/button_radius"
                    android:elevation="4dp"
                    android:minHeight="48dp"
                    android:text="@string/create_alert"
                    android:textColor="@color/blackAlertJaguar_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/menu_icon_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/menu" />


        </RelativeLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>